// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TodoCreator should correctly render 1`] = `
<styled.div>
  <styled.div>
    <styled.input
      onChange={[Function]}
      placeholder="Title"
      value="Hi"
    />
  </styled.div>
  <styled.div>
    <styled.textarea
      onChange={[Function]}
      placeholder="Description"
      value="Guys"
    />
  </styled.div>
  <styled.button
    disabled={false}
    onClick={[Function]}
  >
    Add task
  </styled.button>
</styled.div>
`;

exports[`TodoCreator should correctly render 2`] = `
<div
  class="sc-bdVaJa dBRzUj"
>
  <div
    class="sc-bwzfXH igYdVz"
  >
    <input
      class="sc-htpNat iNiuLJ"
      placeholder="Title"
      value="Hi"
    />
  </div>
  <div
    class="sc-bwzfXH igYdVz"
  >
    <textarea
      class="sc-ifAKCX kfdXsU"
      placeholder="Description"
    >
      Guys
    </textarea>
  </div>
  <button
    class="sc-EHOje drNmmh"
  >
    Add task
  </button>
</div>
`;

exports[`TodoCreator should correctly render 3`] = `
<TodoCreatorComponent
  change={[Function]}
  createNewTodo={[Function]}
  newTodo={
    Object {
      "description": "Guys",
      "id": 0,
      "title": "Hi",
    }
  }
>
  <styled.div>
    <div
      className="sc-bdVaJa dBRzUj"
    >
      <styled.div>
        <div
          className="sc-bwzfXH igYdVz"
        >
          <styled.input
            onChange={[Function]}
            placeholder="Title"
            value="Hi"
          >
            <input
              className="sc-htpNat iNiuLJ"
              onChange={[Function]}
              placeholder="Title"
              value="Hi"
            />
          </styled.input>
        </div>
      </styled.div>
      <styled.div>
        <div
          className="sc-bwzfXH igYdVz"
        >
          <styled.textarea
            onChange={[Function]}
            placeholder="Description"
            value="Guys"
          >
            <textarea
              className="sc-ifAKCX kfdXsU"
              onChange={[Function]}
              placeholder="Description"
              value="Guys"
            />
          </styled.textarea>
        </div>
      </styled.div>
      <styled.button
        disabled={false}
        onClick={[Function]}
      >
        <button
          className="sc-EHOje drNmmh"
          disabled={false}
          onClick={[Function]}
        >
          Add task
        </button>
      </styled.button>
    </div>
  </styled.div>
</TodoCreatorComponent>
`;
